logs/cassandra-cql.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cassandra_cql'...
Compiling './lib/python3.5/site-packages/cassandra_cql/__init__.py'...
***   File "./lib/python3.5/site-packages/cassandra_cql/__init__.py", line 41
    except thrift.transport.TTransport.TTransportException, e:
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cassandra_cql-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/cql'...
Listing './lib/python3.5/site-packages/cql/cassandra'...
Compiling './lib/python3.5/site-packages/cql/cassandra/Cassandra.py'...
***   File "./lib/python3.5/site-packages/cql/cassandra/Cassandra.py", line 2076
    except AuthenticationException, authnx:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cql/cqltypes.py'...
***   File "./lib/python3.5/site-packages/cql/cqltypes.py", line 144
    except (ValueError, AssertionError, IndexError), e:
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cql/cursor.py'...
***   File "./lib/python3.5/site-packages/cql/cursor.py", line 68
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cql/decoders.py'...
***   File "./lib/python3.5/site-packages/cql/decoders.py", line 44
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cql/native.py'...
***   File "./lib/python3.5/site-packages/cql/native.py", line 741
    print '[sending %r]' % (data,)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cql/thrifteries.py'...
***   File "./lib/python3.5/site-packages/cql/thrifteries.py", line 97
    except InvalidRequestException, ire:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cql-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
